--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # Package Files #
 *.jar
+!.mvn/wrapper/maven-wrapper.jar
 *.war
 *.nar
 *.ear
@@ -24,3 +25,7 @@ hs_err_pid*
 replay_pid*
 
 target/
+
+# Maven Wrapper
+.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.properties
