--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
         <jackson.version>2.15.3</jackson.version>
         <hibernate.version>6.2.7.Final</hibernate.version>
         <lombok.version>1.18.30</lombok.version>
+        <junit.version>5.10.0</junit.version>
+        <mockito.version>5.5.0</mockito.version>
+        <postgresql.version>42.6.0</postgresql.version>
+        <h2.version>2.2.224</h2.version>
+        <logback.version>1.4.11</logback.version>
+        <jjwt.version>0.11.5</jjwt.version>
+        <bcrypt.version>0.10.2</bcrypt.version>
     </properties>
 
     <dependencies>
@@ -29,6 +36,13 @@
             <scope>provided</scope>
         </dependency>
         
+        <!-- JAX-RS API for Jersey 2.x -->
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
         <!-- JAX-RS with Jersey Implementation -->
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
@@ -156,11 +170,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Add javax servlet API for webapp-runner compatibility -->
+        <!-- Servlet API for Jersey 2.x compatibility -->
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
 
@@ -303,6 +317,13 @@
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
+        </dependency>
+
+        <!-- Annotation API for Jersey 2.x -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
         </dependency>
     </dependencies>
 
