--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
     </properties>
 
     <dependencies>
+        <!-- Jakarta EE Core APIs -->
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-web-api</artifactId>
+            <version>10.0.0</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <!-- JAX-RS with Jersey Implementation -->
         <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
@@ -286,6 +294,13 @@
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
+        </dependency>
+
+        <!-- Legacy servlet API for compatibility -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
         </dependency>
     </dependencies>
 
