--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -65,5 +65,17 @@
     <!-- Welcome File List -->
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
+        <welcome-file>index.htm</welcome-file>
     </welcome-file-list>
+    
+    <!-- Error pages for better user experience -->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/index.html</location>
+    </error-page>
+    
+    <error-page>
+        <error-code>500</error-code>
+        <location>/index.html</location>
+    </error-page>
 </web-app> 
