--- a/docs/db/docker-compose.yml
+++ b/docs/db/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   api:
-    build: .
+    build: 
+      context: ../..
+      dockerfile: docs/db/Dockerfile
     ports:
       - "8085:8080"
     environment:
