lots of cleaning up

--- a/.gitignore
+++ b/.gitignore
@@ -29,4 +29,11 @@ target/
 # Maven Wrapper
 .mvn/wrapper/maven-wrapper.jar
 !.mvn/wrapper/maven-wrapper.properties
-node_modules
+
+# IDE files
+.idea/
+.vscode/
+.project
+.settings/
+
+.env
