--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 services:
   api:
     build: 
-      context: ../..
-      dockerfile: docs/db/Dockerfile
+      # context: ../..
+      dockerfile: Dockerfile
     ports:
       - "8085:8080"
     environment:
